--- a/index.htm
+++ b/index.htm
@@ -53,7 +53,8 @@
                             good and I do not want to work on it any more. You can hire
                             someone else." 🤗
                         </blockquote>
-                        Model is trained on the <a href="https://github.com/googlecreativelab/quickdraw-dataset" target="blank_">Google's Quick Draw dataset</a> and build using Tensorflow.js.
+                        
+                        The model is trained on the <a href="https://github.com/googlecreativelab/quickdraw-dataset" target="blank_">Google's Quick Draw dataset</a> using Keras & Tensorflow and is deployed on the browser using Tensorflow.js.
                         Click <a href="https://quickdraw.withgoogle.com/data" target="blank_">here</a> to checkout the hotdog (and not hotdog) sketches.
                     </h6>
                     <br>
