--- a/index.htm
+++ b/index.htm
@@ -64,9 +64,17 @@
         </div>
     </div>
 </body>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-151009589-1"></script>
 <script>
     console.log('starting');
     start();
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-151009589-1');
+
 </script>
 
 </html>
